--- a/public/ver-nombres.html
+++ b/public/ver-nombres.html
@@ -4,26 +4,27 @@
   <meta charset="UTF-8">
   <title>Inventarios Registrados</title>
   <style>
-    body {font-family: Arial, sans-serif; text-align: center; padding: 20px;}
-    table {margin: auto; width: 90%; border-collapse: collapse;}
-    th, td {border: 1px solid #ccc; padding: 10px;}
-    th {background-color: #f2f2f2;}
-    button {padding: 5px 10px; margin: 5px; border: none; border-radius: 5px; background: #3498db; color: white; cursor: pointer;}
-    button:hover {background: #2980b9;}
-    .btn-eliminar {background: #e74c3c;}
-    .btn-eliminar:hover {background: #c0392b;}
+    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
+    table { width: 90%; margin: auto; border-collapse: collapse; font-size: 15px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    th { background-color: #f2f2f2; }
+    button { padding: 6px 10px; margin: 3px; border: none; border-radius: 5px; background: #3498db; color: white; cursor: pointer; }
+    button:hover { background: #2980b9; }
+    .btn-eliminar { background: #e74c3c; }
+    .btn-eliminar:hover { background: #c0392b; }
     .modal {
       display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.5); text-align: center; padding-top: 80px; z-index: 1000;
+      background: rgba(0, 0, 0, 0.5); text-align: center; padding-top: 60px; z-index: 1000;
     }
     .modal-content {
-      background: white; margin: auto; padding: 20px; border-radius: 10px; width: 80%; max-height: 90vh; overflow-y: auto;
+      background: white; margin: auto; padding: 20px; border-radius: 10px; width: 90%; max-width: 500px; max-height: 90vh; overflow-y: auto;
     }
+    .footer { margin-top: 30px; font-size: 12px; color: gray; }
   </style>
 </head>
 <body>
 
-<h2>Inventarios Registrados 📦</h2>
+<h2>📋 Inventarios Registrados</h2>
 
 <table>
   <thead>
@@ -37,151 +38,131 @@
       <th>Eliminar</th>
     </tr>
   </thead>
-  <tbody id="tabla-inventarios"></tbody>
+  <tbody id="tablaInventarios"></tbody>
 </table>
 
-<!-- Modal Ver Inventario -->
+<!-- Modal Inventario -->
 <div id="modal-inventario" class="modal">
   <div class="modal-content">
-    <h3>Artículos Capturados</h3>
-    <table style="width:100%; margin-top:10px;">
-      <thead>
-        <tr><th>Artículo</th><th>Cantidad</th><th>Solicito</th></tr>
-      </thead>
-      <tbody id="inventario-body"></tbody>
+    <h3>Inventario Detallado</h3>
+    <table style="width:100%;">
+      <thead><tr><th>Artículo</th><th>Cantidad</th></tr></thead>
+      <tbody id="inventarioDetalle"></tbody>
     </table>
     <br>
-    <button onclick="cerrarModalInventario()">Cerrar</button>
+    <button onclick="cerrarModal('modal-inventario')">Cerrar</button>
   </div>
 </div>
 
-<!-- Modal Ver Historial -->
+<!-- Modal Historial -->
 <div id="modal-historial" class="modal">
   <div class="modal-content">
     <h3>Historial de Modificaciones</h3>
-    <table style="width:100%; margin-top:10px;">
-      <thead>
-        <tr><th>Usuario</th><th>Acción</th><th>Fecha</th></tr>
-      </thead>
-      <tbody id="historial-body"></tbody>
+    <table style="width:100%;">
+      <thead><tr><th>Usuario</th><th>Acción</th><th>Fecha</th></tr></thead>
+      <tbody id="historialDetalle"></tbody>
     </table>
     <br>
-    <button onclick="cerrarModalHistorial()">Cerrar</button>
+    <button onclick="cerrarModal('modal-historial')">Cerrar</button>
   </div>
 </div>
 
+<div class="footer">
+  Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
+</div>
+
 <script>
-let inventarios = [];
+const server = "https://inventario-horom-production.up.railway.app";
 
-async function cargarInventarios(){
-  const res = await fetch("http://localhost:3000/nombres");
-  inventarios = await res.json();
-  const tabla = document.getElementById("tabla-inventarios");
-  tabla.innerHTML = "";
-
-  inventarios.forEach(inv => {
-    const fecha = new Date(inv.creadoEn).toLocaleDateString();
-    tabla.innerHTML += `
+async function cargarInventarios() {
+  try {
+    const res = await fetch(`${server}/nombres`);
+    const inventarios = await res.json();
+    const tabla = document.getElementById("tablaInventarios");
+    tabla.innerHTML = inventarios.map(inv => `
       <tr>
         <td>${inv.nombre}</td>
         <td>${inv.ubicacion}</td>
         <td>${inv.area}</td>
-        <td>${fecha}</td>
-        <td><button onclick="verInventario('${inv._id}')">Ver Inventario</button></td>
-        <td><button onclick="verHistorial('${inv._id}')">Ver Historial</button></td>
-        <td><button class="btn-eliminar" onclick="eliminarInventario('${inv._id}')">Eliminar</button></td>
+        <td>${new Date(inv.creadoEn).toLocaleDateString()}</td>
+        <td><button onclick="verInventario('${inv._id}')">👀 Ver</button></td>
+        <td><button onclick="verHistorial('${inv._id}')">🕑 Ver</button></td>
+        <td><button class="btn-eliminar" onclick="eliminarInventario('${inv._id}')">🗑️ Eliminar</button></td>
       </tr>
-    `;
-  });
+    `).join("");
+  } catch (error) {
+    console.error("❌ Error al cargar inventarios:", error);
+    alert("❌ Error al cargar inventarios");
+  }
 }
 
-// Mostrar inventario SIN filtro de "Solicito"
-function verInventario(id){
-  const inventario = inventarios.find(i => i._id === id);
-  const tbody = document.getElementById("inventario-body");
-  tbody.innerHTML = "";
+async function verInventario(id) {
+  try {
+    const res = await fetch(`${server}/nombres`);
+    const inventarios = await res.json();
+    const inventario = inventarios.find(i => i._id === id);
+    const detalle = document.getElementById("inventarioDetalle");
+    detalle.innerHTML = "";
 
-  if (!inventario.articulos || Object.keys(inventario.articulos).length === 0) {
-    tbody.innerHTML = `<tr><td colspan="3">Sin artículos capturados.</td></tr>`;
-    return;
+    if (!inventario.articulos || Object.keys(inventario.articulos).length === 0) {
+      detalle.innerHTML = `<tr><td colspan="2">Sin artículos registrados.</td></tr>`;
+    } else {
+      for (const [articulo, cantidad] of Object.entries(inventario.articulos)) {
+        detalle.innerHTML += `<tr><td>${articulo}</td><td>${cantidad}</td></tr>`;
+      }
+    }
+    document.getElementById("modal-inventario").style.display = "block";
+  } catch (error) {
+    console.error("❌ Error al ver inventario:", error);
   }
-
-  for (const [articulo, data] of Object.entries(inventario.articulos)) {
-    const cantidad = data.cantidad ?? "-";
-    const solicito = data.solicito === "si" ? "✅" : "";
-
-    tbody.innerHTML += `
-      <tr>
-        <td>${articulo}</td>
-        <td>${cantidad}</td>
-        <td>${solicito}</td>
-      </tr>`;
-  }
-
-  document.getElementById("modal-inventario").style.display = "block";
 }
 
-// Mostrar historial
-function verHistorial(id){
-  const inventario = inventarios.find(i => i._id === id);
-  const tbody = document.getElementById("historial-body");
-  tbody.innerHTML = "";
+async function verHistorial(id) {
+  try {
+    const res = await fetch(`${server}/nombres`);
+    const inventarios = await res.json();
+    const inventario = inventarios.find(i => i._id === id);
+    const detalle = document.getElementById("historialDetalle");
+    detalle.innerHTML = "";
 
-  if (!inventario.historial || inventario.historial.length === 0) {
-    tbody.innerHTML = `<tr><td colspan="3">Sin modificaciones registradas.</td></tr>`;
-  } else {
-    inventario.historial.forEach(h => {
-      const fecha = new Date(h.fecha).toLocaleString();
-      tbody.innerHTML += `<tr><td>${h.usuario}</td><td>${h.accion}</td><td>${fecha}</td></tr>`;
-    });
+    if (!inventario.historial || inventario.historial.length === 0) {
+      detalle.innerHTML = `<tr><td colspan="3">Sin historial registrado.</td></tr>`;
+    } else {
+      inventario.historial.forEach(h => {
+        detalle.innerHTML += `<tr><td>${h.usuario}</td><td>${h.accion}</td><td>${new Date(h.fecha).toLocaleString()}</td></tr>`;
+      });
+    }
+    document.getElementById("modal-historial").style.display = "block";
+  } catch (error) {
+    console.error("❌ Error al ver historial:", error);
   }
-
-  document.getElementById("modal-historial").style.display = "block";
 }
 
-// Eliminar inventario
-async function eliminarInventario(id){
+function cerrarModal(modalId) {
+  document.getElementById(modalId).style.display = "none";
+}
+
+async function eliminarInventario(id) {
   const clave = prompt("⚠️ Introduce la supercontraseña para eliminar:");
   if (clave !== "Pelon93.") {
     alert("❌ Contraseña incorrecta. No autorizado.");
     return;
   }
-
-  if (!confirm("¿Estás seguro de eliminar este inventario? Esta acción no se puede deshacer.")) {
-    return;
-  }
+  if (!confirm("¿Seguro que quieres eliminar este inventario?")) return;
 
   try {
-    const res = await fetch(`http://localhost:3000/eliminar-nombre/${id}`, {
-      method: "DELETE"
-    });
-
+    const res = await fetch(`${server}/eliminar-nombre/${id}`, { method: "DELETE" });
     const mensaje = await res.text();
     alert(mensaje);
     cargarInventarios();
   } catch (error) {
-    console.error("Error al eliminar:", error);
-    alert("❌ Error al eliminar inventario.");
+    console.error("❌ Error al eliminar inventario:", error);
+    alert("❌ Error al eliminar inventario");
   }
 }
 
-function cerrarModalInventario(){
-  document.getElementById("modal-inventario").style.display = "none";
-}
-function cerrarModalHistorial(){
-  document.getElementById("modal-historial").style.display = "none";
-}
-
+// Cargar inventarios al iniciar
 cargarInventarios();
-</script>
-
-<!-- 🔄 Escuchar cambios automáticos -->
-<script>
-window.addEventListener("storage", function(e) {
-  if (e.key === "actualizarInventario" && e.newValue === "true") {
-    cargarInventarios();
-  }
-});
 </script>
 
 </body>
