--- a/public/cocina.html
+++ b/public/cocina.html
@@ -2,54 +2,18 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Inventario Área Cocina</title>
+  <title>Inventario Área Cocina 👨‍🍳</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      text-align: center;
-    }
-    h2 {
-      margin-bottom: 20px;
-    }
-    table {
-      width: 90%;
-      margin: 0 auto;
-      border-collapse: collapse;
-      font-size: 15px;
-    }
-    th, td {
-      padding: 8px;
-      border: 1px solid #ccc;
-      text-align: center;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-    input[type="number"], input[type="checkbox"] {
-      padding: 5px;
-      font-size: 14px;
-      text-align: center;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 15px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #218838;
-    }
-    .mensaje {
-      margin-top: 15px;
-      font-size: 16px;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; text-align: center; }
+    h2 { margin-bottom: 20px; }
+    table { width: 95%; margin: auto; border-collapse: collapse; font-size: 15px; }
+    th, td { padding: 8px; border: 1px solid #ccc; text-align: center; }
+    th { background-color: #f2f2f2; }
+    input[type="number"], select { width: 70px; padding: 5px; font-size: 14px; border-radius: 4px; border: 1px solid #ccc; }
+    button { margin-top: 20px; padding: 10px 20px; font-size: 15px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer; }
+    button:hover { background-color: #218838; }
+    .mensaje { margin-top: 15px; font-size: 16px; }
+    .footer { margin-top: 30px; font-size: 12px; color: gray; }
   </style>
 </head>
 <body>
@@ -62,7 +26,7 @@
       <tr>
         <th>Artículo</th>
         <th>Cantidad</th>
-        <th>Solicito</th>
+        <th>¿Solicitó?</th>
       </tr>
     </thead>
     <tbody id="tabla-articulos"></tbody>
@@ -73,45 +37,55 @@
 
 <div class="mensaje" id="mensaje"></div>
 
+<div class="footer">
+  Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
+</div>
+
 <script>
 const articulos = [
-  "AROS DE CEBOLLA", "BISTEK PICADO", "DEDOS DE Q", "TOCINO", "SALCHICHA", "ARROZ MEX",
-  "AZUCAR", "HARINA", "HUEVO", "MAIZENA", "PIMIENTA", "SAL", "BBQ", "BUFALO",
-  "KETCHUP STARVALUE", "MANGO HABAN", "MAYONESA STARVALUE", "AJO", "AJO MOLIDO",
-  "ANIS", "CHIL ARBOL", "GENGIBRE", "ALUMINIO GDE", "PAPEL CEBOLLA", "PIEDRA PLANCHA",
-  "PLATO 7", "TAPA 1 LT", "TAPA 2 OZ", "VASO 1 LT", "VASO 2 OZ", "CHIPOTLE LATA GDE",
-  "KETCHUP HUNTS", "BOLSA NEGR", "DESENGRASANTE", "FIBRAS", "PAPEL CANELA", "TRAPEADOR",
-  "CALABAZA", "CEBOLLA", "CEBOLLIN", "HABANERO", "JALAPEÑO", "MORRON AM", "MORRON VE",
-  "PAPA COSTAL", "ZANAHORIA", "CONCENTRADO SAMBAL", "ACEITE", "COLORANTE", "PARMESANO",
+  "AROS DE CEBOLLA", "BISTEK PICADO", "DEDOS DE Q", "TOCINO", "SALCHICHA",
+  "ARROZ MEX", "AZUCAR", "HARINA", "HUEVO", "MAIZENA", "PIMIENTA", "SAL",
+  "BBQ", "BUFALO", "KETCHUP STARVALUE", "MANGO HABAN", "MAYONESA STARVALUE",
+  "AJO", "AJO MOLIDO", "ANIS", "CHIL ARBOL", "GENGIBRE", "ALUMINIO GDE",
+  "PAPEL CEBOLLA", "PIEDRA PLANCHA", "PLATO 7", "TAPA 1 LT", "TAPA 2 OZ",
+  "VASO 1 LT", "VASO 2 OZ", "CHIPOTLE LATA GDE", "KETCHUP HUNTS", "BOLSA NEGR",
+  "DESENGRASANTE", "FIBRAS", "PAPEL CANELA", "TRAPEADOR", "CALABAZA", "CEBOLLA",
+  "CEBOLLIN", "HABANERO", "JALAPEÑO", "MORRON AM", "MORRON VE", "PAPA COSTAL",
+  "ZANAHORIA", "CONCENTRADO SAMBAL", "ACEITE", "COLORANTE", "PARMESANO",
   "PIMI LIMON", "AJINOMOTO", "DASHI", "SOYA KIKOMA", "SOYA LUCKY", "TOGARACHI",
   "ALITAS", "PAPA BOLSA", "PECHUGA", "PUERCO", "TRAPOS", "ENCENDEDOR", "BROCOLI"
 ];
 
+const server = "https://inventario-horom-production.up.railway.app";
 const tabla = document.getElementById("tabla-articulos");
 
 articulos.forEach((nombre, index) => {
   const fila = document.createElement("tr");
   fila.innerHTML = `
     <td>${nombre}</td>
-    <td><input type="number" min="0" id="input-cantidad-${index}" autocomplete="off"></td>
-    <td><input type="checkbox" id="input-solicito-${index}"></td>
+    <td><input type="number" min="0" id="input-${index}" placeholder="0" required></td>
+    <td>
+      <select id="solicito-${index}">
+        <option value="No">No</option>
+        <option value="Si">Sí</option>
+      </select>
+    </td>
   `;
   tabla.appendChild(fila);
 });
 
-const inputsCantidad = Array.from(document.querySelectorAll('input[type="number"]'));
-
-inputsCantidad.forEach((input, index) => {
+const inputs = Array.from(document.querySelectorAll('input[type="number"]'));
+inputs.forEach((input, index) => {
   input.addEventListener("keydown", (e) => {
     if (e.key === "Enter") {
       e.preventDefault();
-      if (index + 1 < inputsCantidad.length) inputsCantidad[index + 1].focus();
+      if (index + 1 < inputs.length) inputs[index + 1].focus();
       else document.getElementById("btn-guardar").focus();
     }
   });
 });
 
-// Advertencia si intenta cerrar sin guardar
+// Evitar cerrar accidentalmente
 window.addEventListener('beforeunload', function (e) {
   e.preventDefault();
   e.returnValue = '';
@@ -130,48 +104,29 @@ document.getElementById("formulario-cocina").addEventListener("submit", async (e
   }
 
   const datos = {};
-  let capturado = false;
-  let camposIncompletos = false;
-
+  let todosLlenos = true;
   articulos.forEach((nombre, index) => {
-    const cantidadTexto = document.getElementById(`input-cantidad-${index}`).value.trim();
-    const solicito = document.getElementById(`input-solicito-${index}`).checked ? "si" : "no";
-
-    if (cantidadTexto === "") {
-      camposIncompletos = true;
-      return;
-    }
-
-    const cantidad = parseInt(cantidadTexto);
-
-    datos[nombre] = {
-      cantidad: cantidad,
-      solicito: solicito
-    };
-    capturado = true;
+    const cantidad = document.getElementById(`input-${index}`).value.trim();
+    const solicito = document.getElementById(`solicito-${index}`).value;
+    if (cantidad === "") todosLlenos = false;
+    datos[nombre] = `${cantidad} | Solicito: ${solicito}`;
   });
 
-  if (camposIncompletos) {
+  if (!todosLlenos) {
     mensaje.style.color = "red";
-    mensaje.textContent = "❌ Completa todas las cantidades antes de guardar.";
-    return;
-  }
-
-  if (!capturado) {
-    mensaje.style.color = "red";
-    mensaje.textContent = "❌ Ingresa al menos una cantidad.";
+    mensaje.textContent = "❌ No dejes campos de cantidad vacíos.";
     return;
   }
 
   try {
     if (datosUsuario.modoEdicion) {
-      await fetch(`http://localhost:3000/editar-nombre/${datosUsuario.id}`, {
+      await fetch(`${server}/editar-nombre/${datosUsuario.id}`, {
         method: "PUT",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ articulos: datos, usuario: datosUsuario.usuario })
       });
     } else {
-      await fetch("http://localhost:3000/guardar-nombre", {
+      await fetch(`${server}/guardar-nombre`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
@@ -183,18 +138,9 @@ document.getElementById("formulario-cocina").addEventListener("submit", async (e
 
     mensaje.style.color = "green";
     mensaje.textContent = "✅ Inventario guardado exitosamente.";
-
-    localStorage.setItem("actualizarInventario", "true");
-    setTimeout(() => {
-      localStorage.removeItem("actualizarInventario");
-    }, 500);
-
     localStorage.removeItem("tempDatos");
     window.removeEventListener('beforeunload', () => {});
-
-    setTimeout(() => {
-      window.close();
-    }, 1000);
+    setTimeout(() => window.close(), 1000);
 
   } catch (error) {
     console.error(error);
